// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion/ContentPresenter renders collapsed content 1`] = `
.emotion-0 {
  -webkit-transition: max-height 0ms ease-in-out,opacity 0ms ease-in-out;
  transition: max-height 0ms ease-in-out,opacity 0ms ease-in-out;
  max-height: 0;
  opacity: 0;
  max-height: 0;
  opacity: 0;
  overflow: hidden;
}

<div
  className="emotion-0"
>
  test
</div>
`;

exports[`Accordion/ContentPresenter renders expanded content 1`] = `
.emotion-0 {
  -webkit-transition: max-height 0ms ease-in-out,opacity 0ms ease-in-out;
  transition: max-height 0ms ease-in-out,opacity 0ms ease-in-out;
  max-height: 0;
  opacity: 0;
  max-height: 0px;
  opacity: 1;
  overflow: hidden;
}

<div
  className="emotion-0"
>
  test
</div>
`;
